--- a/docroot/themes/custom/ucsf/scss/global/_icons.scss
+++ b/docroot/themes/custom/ucsf/scss/global/_icons.scss
@@ -40,57 +40,69 @@ a {
     display: inline-block;
 
     &:hover {
-      text-decoration: underline;
+      background: url(/themes/custom/ucsf/assets/images/card/education.svg) left center no-repeat transparent;
     }
   }
 }
 
-.icon-doctor {
-  background-image: url(/themes/custom/ucsf/assets/images/card/doctor.svg);
+.icon-media,
+a.icon-media:hover {
+  background: url(/themes/custom/ucsf/assets/images/card/media.svg) left center no-repeat transparent;
 }
 
-.icon-campus {
-  background-image: url(/themes/custom/ucsf/assets/images/card/campus.svg);
+.icon-doctor,
+a.icon-doctor:hover {
+  background-image: url(/themes/custom/ucsf/assets/images/card/doctor.svg) left center no-repeat transparent;
 }
 
-.icon-money {
-  background-image: url(/themes/custom/ucsf/assets/images/card/money.svg);
+.icon-campus,
+a.icon-campus:hover {
+  background: url(/themes/custom/ucsf/assets/images/card/campus.svg) left center no-repeat transparent;
 }
 
-.icon-awards {
-  background-image: url(/themes/custom/ucsf/assets/images/card/awards.svg);
+.icon-money,
+a.icon-money:hover {
+  background: url(/themes/custom/ucsf/assets/images/card/money.svg) left center no-repeat transparent;
 }
 
-.icon-support {
-  background-image: url(/themes/custom/ucsf/assets/images/card/support.svg);
+.icon-awards,
+a.icon-awards:hover {
+  background: url(/themes/custom/ucsf/assets/images/card/awards.svg) left center no-repeat transparent;
 }
 
-.icon-caduceus {
-  background-image: url(/themes/custom/ucsf/assets/images/card/caduceus.svg);
+.icon-support,
+a.icon-support:hover {
+  background: url(/themes/custom/ucsf/assets/images/card/support.svg) left center no-repeat transparent;
 }
 
-.icon-heart {
-  background-image: url(/themes/custom/ucsf/assets/images/card/heart.svg);
+.icon-caduceus,
+a.icon-caduceus:hover {
+  background: url(/themes/custom/ucsf/assets/images/card/caduceus.svg) left center no-repeat transparent;
 }
 
-.icon-comprehensive {
-  background-image: url(/themes/custom/ucsf/assets/images/card/comprehensive.svg);
+.icon-heart,
+a.icon-heart:hover {
+  background: url(/themes/custom/ucsf/assets/images/card/heart.svg) left center no-repeat transparent;
 }
 
-.icon-media {
-  background-image: url(/themes/custom/ucsf/assets/images/card/media.svg);
+.icon-comprehensive,
+a.icon-comprehensive:hover {
+  background: url(/themes/custom/ucsf/assets/images/card/comprehensive.svg) left center no-repeat transparent;
 }
 
-.icon-microscope {
-  background-image: url(/themes/custom/ucsf/assets/images/card/microscope.svg);
+.icon-microscope,
+a.icon-microscope:hover {
+  background: url(/themes/custom/ucsf/assets/images/card/microscope.svg) left center no-repeat transparent;
 }
 
-.icon-directions {
-  background-image: url(/themes/custom/ucsf/assets/images/card/directions.svg);
+.icon-directions,
+a.icon-directions:hover {
+  background: url(/themes/custom/ucsf/assets/images/card/directions.svg) left center no-repeat transparent;
 }
 
-.icon-transit {
-  background-image: url(/themes/custom/ucsf/assets/images/card/transit.svg);
+.icon-transit,
+a.icon-transit:hover {
+  background: url(/themes/custom/ucsf/assets/images/card/transit.svg) left center no-repeat transparent;
 }
 
 [data-primary-area="pa-about"],
@@ -139,6 +151,6 @@ a {
 [data-primary-area="pa-research"] {
   figure {
     background-image: url(/themes/custom/ucsf/assets/images/card/microscope-reverse.svg);
-    background-color: $teal;
+    background-color: $teal left center no-repeat transparent;
   }
 }
