--- a/docroot/themes/custom/ucsf/scss/node/_node-article.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-article.scss
@@ -44,7 +44,7 @@
   grid-gap: 0;
 
   .article-header {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.9);
     grid-column: 2 / -1;
     grid-row: 2 / -1;
     padding: 5% 5% 0 8%;
@@ -152,7 +152,6 @@
   margin-top: $space;
   margin-bottom: 0;
   padding-bottom: $space-four;
-  border-bottom: 1px solid $gray-lighter;
 
   > * {
     display: inline;
@@ -160,7 +159,6 @@
 
   a {
     color: $gray-blue;
-    text-decoration: underline;
 
     &:hover {
       text-decoration: none;
@@ -346,12 +344,6 @@ figure.align-center {
       &::before {
         display: none;
       }
-    }
-  }
-
-  .tags-menu__item {
-    a:hover {
-      text-decoration: underline;
     }
   }
 }
