--- a/docroot/themes/custom/ucsf/scss/node/_node-full-wdith-page.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-full-wdith-page.scss
@@ -11,6 +11,12 @@
     padding: $space-ten;
     padding-bottom: 0;
   }
+
+  .field-column-content-content {
+    .paragraph-text-block {
+      padding: 0;
+    }
+  }
 }
 
 .full-width-page-banner {
