--- a/docroot/themes/custom/ucsf/scss/tools/_mixins.scss
+++ b/docroot/themes/custom/ucsf/scss/tools/_mixins.scss
@@ -136,7 +136,7 @@
 }
 
 @mixin link-text {
-  @include link-colors($c-blue);
+  @include link-colors($c-blue-link);
   text-decoration: none;
 
   &:hover {
