--- a/docroot/themes/custom/ucsf/scss/tools/_variables.scss
+++ b/docroot/themes/custom/ucsf/scss/tools/_variables.scss
@@ -21,6 +21,8 @@ $c-dark-navy: #121a31;
 $c-teal: #058488;
 $c-green: #6ea400;
 $c-blue: #007cbe;
+$c-blue-link: #0071ad;
+$c-blue-link-rollover: #e8f4fa;
 $orange: #f26d04;
 $c-purple: #716fb2;
 $c-red: #eb093c;
